fix leadership page spacing 1200px 5

--- a/wp-content/themes/conall-child/src/scss/pages/leadership.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/leadership.scss
@@ -104,6 +104,29 @@ div#leadership-content {
         margin-top: 20px !important;
     }
 }
+@media all and (max-width: 1300px) {
+    div#leadership-content div.leadership-row:nth-child(1) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 20px !important;
+    }
+    div#leadership-content div.leadership-row:nth-child(2) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 60px !important;
+    }
+    div#leadership-content div.leadership-row:nth-child(3) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 20px !important;
+    }
+    div#leadership-content div.leadership-row:nth-child(4) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 60px !important;
+    }
+    div#leadership-content div.leadership-row:nth-child(5) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 100px !important;
+    }
+    div#leadership-content div.leadership-row:nth-child(6) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 40px !important;
+    }
+    div#leadership-content div.leadership-row:nth-child(7) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
+        margin-top: 20px !important;
+    }
+}
 @media all and (max-width: 1200px) {
     div#leadership-content div.leadership-row:nth-child(1) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
         margin-top: 60px !important;
@@ -115,16 +138,16 @@ div#leadership-content {
         margin-top: 60px !important;
     }
     div#leadership-content div.leadership-row:nth-child(4) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 20px !important;
+        margin-top: 120px !important;
     }
     div#leadership-content div.leadership-row:nth-child(5) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 20px !important;
+        margin-top: 170px !important;
     }
     div#leadership-content div.leadership-row:nth-child(6) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 100px !important;
+        margin-top: 90px !important;
     }
     div#leadership-content div.leadership-row:nth-child(7) div.col-leadership div.vc_column-inner > div.wpb_wrapper div.leadership-section.bottom {
-        margin-top: 20px !important;
+        margin-top: 60px !important;
     }
 }
 @media all and (max-width: 1024px) {
